--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -17,6 +17,7 @@
     --cell-border-color: theme('colors.gray.200');
     --current-cell-border-color: theme('colors.gray.400');
     --editing-cell-outline-color: theme('colors.gray.400');
+    --editing-lits-cell-outline-color: theme('colors.blue.400');
 
     --background: theme('colors.white');
     --foreground: 222.2 84% 4.9%;
@@ -64,6 +65,7 @@
     --cell-border-color: theme('colors.slate.800');
     --current-cell-border-color: theme('colors.slate.600');
     --editing-cell-outline-color: theme('colors.slate.600');
+    --editing-lits-cell-outline-color: theme('colors.blue.600');
   
     --background: theme('colors.slate.900');
     --foreground: 210 40% 98%;
