--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,7 +9,8 @@
     --logo-parens-color: theme('colors.blue.400');
   
     --header-background-color: theme('colors.gray.200'); /* colors.gray.200, rgb(249, 250, 251) */
-    --selected-header-background-color: rgba(249, 250, 251, 0.85);
+    --is-selected-header-background-color: rgba(249, 250, 251, 0.35);
+    --has-selected-cell-header-background-color: rgba(249, 250, 251, 0.80);
     --header-border-color: theme('colors.gray.300');
     --cell-background-color: theme('colors.white'); /* colors.white, rgb(243, 244, 246) */
     --selected-cell-background-color: rgba(255, 255, 255, 0.8);
@@ -59,7 +60,8 @@
     --logo-parens-color: theme('colors.blue.600');
   
     --header-background-color: theme('colors.slate.800'); /* colors.slate.800, rgb(30, 41, 59) */
-    --selected-header-background-color: rgb(30, 41, 59, 0.80);
+    --is-selected-header-background-color: transparent;
+    --has-selected-cell-header-background-color: rgb(30, 41, 59, 0.80);
     --header-border-color: theme('colors.slate.700');
     --cell-background-color: theme('colors.slate.900'); /* colors.slate.900, rgb(15, 23, 42) */
     --selected-cell-background-color: rgba(15, 23, 42, 0.8);
@@ -72,7 +74,7 @@
     --error-color: theme('colors.red.500');
 
     --background: theme('colors.slate.900');
-    --foreground: 210 40% 98%;
+    --foreground: 210 40% 80%;
 
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
