--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,13 +12,13 @@
     --is-selected-header-background-color: rgba(249, 250, 251, 0.35);
     --has-selected-cell-header-background-color: rgba(249, 250, 251, 0.80);
     --header-border-color: theme('colors.gray.300');
-    --cell-background-color: theme('colors.white'); /* colors.white, rgb(243, 244, 246) */
-    --selected-cell-background-color: rgba(255, 255, 255, 0.8);
+    --grid: theme('colors.white'); /* colors.white, rgb(243, 244, 246) */
+    --selected-cell: rgba(0, 74, 247, 0.1);
     --referenced-cell-background-color: rgb(252, 255, 198);
     --cell-border-color: theme('colors.gray.200');
     --current-cell-border-color: theme('colors.gray.400');
     --editing-cell-outline-color: theme('colors.gray.400');
-    --editing-lits-cell-outline-color: theme('colors.blue.400');
+    --cell-border: theme('colors.blue.500');
 
     --error-color: theme('colors.red.500');
 
@@ -63,13 +63,13 @@
     --is-selected-header-background-color: transparent;
     --has-selected-cell-header-background-color: rgb(30, 41, 59, 0.80);
     --header-border-color: theme('colors.slate.700');
-    --cell-background-color: theme('colors.slate.900'); /* colors.slate.900, rgb(15, 23, 42) */
-    --selected-cell-background-color: rgba(15, 23, 42, 0.8);
+    --grid: theme('colors.slate.900'); /* colors.slate.900, rgb(15, 23, 42) */
+    --selected-cell: rgba(15, 23, 42, 0.8);
     --referenced-cell-background-color: rgb(0, 0, 0);
     --cell-border-color: theme('colors.slate.800');
     --current-cell-border-color: theme('colors.slate.600');
     --editing-cell-outline-color: theme('colors.slate.600');
-    --editing-lits-cell-outline-color: theme('colors.blue.600');
+    --cell-border: theme('colors.blue.500');
   
     --error-color: theme('colors.red.500');
 
