--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -37,8 +37,8 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
 
-    --primary: theme('colors.white');
-    --primary-foreground: 222.2 84% 4.9%;
+    --primary: theme('colors.gray.200');
+    --primary-foreground: theme('colors.gray.900');
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -89,7 +89,7 @@
     --input: 215, 25%, 27%;
 
     --primary: theme('colors.slate.900');
-    --primary-foreground: 210 40% 80%;
+    --primary-foreground: theme('colors.slate.300');
 
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
