--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -87,9 +87,9 @@
     --card-foreground: 210 40% 98%;
 
     --border: 215, 25%, 27%;
-    --input: 215, 25%, 27%;
+    --input: 215 25% 27%;
 
-    --primary: theme('colors.slate.900');
+    --primary: theme('colors.slate.700');
     --primary-foreground: theme('colors.slate.300');
     --primary-muted-foreground: theme('colors.slate.500');
 
